k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: nickfealytomoacr.azurecr.io/tomo-back:latest
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: kv-secrets-inline
              mountPath: "/mnt/secrets"
              readOnly: true
      volumes:
        - name: kv-secrets-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "tomo-csi"
---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - port: 80
      targetPort: 5000
