k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tomo-ingress
  namespace: default
  annotations:
    kubernetes.azure.com/use-private-ip: "false"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/websocket-services: "backend"
spec:
  tls:
    - hosts:
        - nickfealytomo.site
      secretName: frontend-tls
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
    - host: nickfealytomo.site
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 80
          - path: /socket.io
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 80
          - path: /mongo
            pathType: Prefix
            backend:
              service:
                name: mongo-express
                port:
                  number: 8081
          - path: /redis
            pathType: Prefix
            backend:
              service:
                name: redisinsight-service
                port:
                  number: 5540
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
